--- a/Scss/estilos.scss
+++ b/Scss/estilos.scss
@@ -46,7 +46,7 @@ body {
 h2,
 h3,
 p {
-    color: #919ea1;
+    color: $colorTextos;;
 }
 
 ol,
@@ -73,7 +73,7 @@ header {
     }
 
     li a {
-        font-family: 'Raleway', sans-serif;
+        font-family: $textos;
         color: #fff;
         text-decoration: none;
         background-image: linear-gradient(#fff, #eee);
@@ -120,27 +120,27 @@ header {
 .navegador__activo {
     background-color: #fff;
     box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.29);
-    height: 15vh;
+    height: 5rem;
 
     h2 {
-        color: #14505c;
+        color: $colorPrincipal;
         align-self: flex-start;
     }
 
     span {
-        background-color: #14505c;
+        background-color: $colorPrincipal;
         align-self: center;
     }
 
     ul li a {
-        color: #14505c;
+        color: $colorPrincipal;
         text-decoration: none;
     }
 
     ul li a:hover {
         background-image: linear-gradient(#14505c, #14505c);
         background-size: 100% 2px;
-        color: #14505c;
+        color: $colorPrincipal;
 
     }
 
@@ -194,11 +194,11 @@ header {
 }
 
 input:checked+.slider {
-    background-color: #14505c;
+    background-color: $colorPrincipal;
 }
 
 input:focus+.slider {
-    box-shadow: 0 0 1px #14505c;
+    box-shadow: 0 0 1px $colorPrincipal;
 }
 
 input:checked+.slider:before {
@@ -227,7 +227,7 @@ input:checked+.slider:before {
 
     &__titulo {
         grid-area: titulo;
-        font-family: 'Raleway', sans-serif;
+        font-family: $textos;
         color: #fff;
         display: flex;
         flex-direction: column;
@@ -239,7 +239,7 @@ input:checked+.slider:before {
 
     &__subTitulo2 {
         grid-area: descuento;
-        font-family: 'Raleway', sans-serif;
+        font-family: $textos;
         color: #fff;
         display: flex;
         flex-direction: column;
@@ -252,9 +252,9 @@ input:checked+.slider:before {
 
     &__titulo b {
         font-family: 'Bebas Neue', cursive;
-        color: #25a794;
+        color: $colorSecundario;
         font-size: 9rem;
-        text-shadow: 5px 5px 0px #14505c;
+        text-shadow: 5px 5px 0px $colorPrincipal;
     }
 
     &__span {
@@ -264,7 +264,7 @@ input:checked+.slider:before {
     &__span2 {
 
         font-size: 10rem;
-        font-family: 'Raleway', sans-serif;
+        font-family: $textos;
         border-right: 4px solid;
         border-left: 4px solid;
         padding: 0px 1.25rem;
@@ -309,7 +309,7 @@ input:checked+.slider:before {
     justify-content: space-around;
     align-content: center;
     padding: 20px;
-    background-color: #14505c;
+    background-color: $colorPrincipal;
 
     &__label {
         color: #e9e9e9;
@@ -325,7 +325,7 @@ input:checked+.slider:before {
         height: 1.875rem;
         padding: 0.625rem;
         border: none;
-        border-bottom: solid 4px #25a794;
+        border-bottom: solid 4px $colorSecundario;
         outline: none;
         transition: 0.5s;
     }
@@ -353,7 +353,7 @@ input:checked+.slider:before {
         width: 100%;
         height: 30px;
         color: #fff;
-        background-color: #1c7d6f;
+        background-color: $colorInput;
         outline: none;
         border: none;
         border-radius: 3px;
@@ -365,7 +365,7 @@ input:checked+.slider:before {
         padding: 3px;
         align-self: flex-end;
         margin-top: 40px;
-        background-color: #1c7d6f;
+        background-color: $colorInput;
         color: #fff;
         border: none;
         transition: 0.5s;
@@ -374,11 +374,11 @@ input:checked+.slider:before {
 
     &__btn:hover {
         transform: scale(1.05);
-        background-color: #14505c;
+        background-color: $colorPrincipal;
     }
 
     &__input:hover {
-        background-color: #14505c;
+        background-color: $colorPrincipal;
         color: #fff;
         border-bottom: solid 4px #82e3d5;
     }
@@ -462,14 +462,14 @@ input:checked+.slider:before {
         grid-area: btn;
         height: 30px;
         color: #fff;
-        background-color: #14505c;
+        background-color: $colorPrincipal;
         border: none;
         border-radius: 5px;
         transition: 0.5s;
     }
 
     &__btn:hover {
-        background-color: #076477;
+        background-color: $colorHoverBtn;
         transform: scale(1.05);
     }
 
@@ -486,7 +486,7 @@ input:checked+.slider:before {
     &__cheackDatos {
         padding: 1.25rem;
         align-self: center;
-        border: 3px solid #14505c;
+        border: 3px solid $colorPrincipal;
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
@@ -506,7 +506,7 @@ input:checked+.slider:before {
     }
 
     &__check span {
-        color: #14505c;
+        color: $colorPrincipal;
         font-size: 1.625rem;
 
     }
@@ -524,7 +524,7 @@ input:checked+.slider:before {
     &__check button {
         width: 7.5rem;
         height: 1.875rem;
-        background-color: #14505c;
+        background-color: $colorPrincipal;
         border: none;
         border-radius: 0.3125rem;
         color: #fff;
@@ -539,7 +539,7 @@ input:checked+.slider:before {
     }
 
     &__check button:hover {
-        background-color: #1c7d6f;
+        background-color: $colorInput;
         transform: scale(1.05);
     }
 }
@@ -547,7 +547,7 @@ input:checked+.slider:before {
 .btn__reserva {
     width: 8.125rem;
     height: 2rem;
-    background-color: #14505c;
+    background-color: $colorPrincipal;
     border: none;
     border-radius: 5px;
     color: #fff;
@@ -559,7 +559,7 @@ input:checked+.slider:before {
 }
 
 .btn__reserva:hover {
-    background-color: #1c7d6f;
+    background-color: $colorInput;
     transform: scale(1.05);
 }
 
@@ -588,12 +588,12 @@ input:checked+.slider:before {
 .reservas {
     width: 100%;
     display: flex;
-    background: #14505c;
+    background: $colorPrincipal;
     height: 6.25rem;
     justify-content: space-between;
     align-content: center;
     align-items: center;
-    font-family: "Bebas Neue", cursive;
+    font-family: $titulo;
     padding: 1.25rem;
 
     &__completadas {
@@ -607,7 +607,7 @@ input:checked+.slider:before {
     }
 
     &__titulo {
-        background-color: #14505c;
+        background-color: $colorPrincipal;
         color: #fff;
         font-size: 1.875rem;
         margin: 0;
@@ -625,7 +625,7 @@ input:checked+.slider:before {
     }
 
     &__completadas span {
-        color: #14505c;
+        color: $colorPrincipal;
         font-size: 1.875rem;
 
     }
@@ -656,7 +656,7 @@ input:checked+.slider:before {
     display: flex;
     flex-direction: column;
     width: 18.75rem;
-    border: 3px solid #14505c;
+    border: 3px solid $colorPrincipal;
     margin: 2px;
 
     p {
@@ -673,7 +673,7 @@ input:checked+.slider:before {
 }
 
 .borrar {
-    background-color: #e60808;
+    background-color: $btnBorrar;
     width: 1.875rem;
     height: 1.875rem;
     color: #fff;
@@ -693,12 +693,12 @@ input:checked+.slider:before {
     width: 100%;
     height: auto;
     display: flex;
-    background: #14505c;
+    background: $colorPrincipal;
     flex-direction: column;
     justify-content: space-between;
     align-content: center;
     align-items: center;
-    font-family: "Bebas Neue", cursive;
+    font-family: $titulo;
     padding: 1.25rem;
     margin-bottom: 1.25rem;
 
@@ -760,7 +760,7 @@ input:checked+.slider:before {
 
     &__titulo {
         grid-area: titulo;
-        font-family: 'Raleway', sans-serif;
+        font-family: $textos;
         font-weight: bold;
         font-size: 2.5rem;
         padding: 2.5rem;
@@ -793,7 +793,7 @@ input:checked+.slider:before {
     justify-content: center;
     align-content: center;
     padding: 1.25rem;
-    background-color: #14505c;
+    background-color: $colorPrincipal;
 
     &__label {
         font-family: 'Bebas Neue', cursive;
@@ -866,14 +866,14 @@ input:checked+.slider:before {
     &__input:hover {
         background-color: #0b4753;
         color: #fff;
-        border-bottom: solid 4px #25a794;
+        border-bottom: solid 4px $colorSecundario;
 
     }
 
     &__textarea:hover {
         background-color: #0b4753;
         color: #fff;
-        border-bottom: solid 4px #25a794;
+        border-bottom: solid 4px $colorSecundario;
     }
 
 }
@@ -904,7 +904,7 @@ input:checked+.slider:before {
 
 .footer a {
     text-decoration: none;
-    color: #14505c;
+    color: $colorPrincipal;
     padding-left: 0;
     transition: .3s;
 }
@@ -978,13 +978,13 @@ input:checked+.slider:before {
     .navegador__activo {
         background-color: #fff;
         box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.29);
-        height: 15vh;
+        height: 5rem;
         justify-content: center;
 
     }
 
     .navegador__activo ul li a {
-        color: #14505c;
+        color: $colorPrincipal;
     }
 
     .nav__logo {
@@ -994,8 +994,7 @@ input:checked+.slider:before {
     .nav__hamburguesa {
         display: block;
         position: absolute;
-        top: 10px;
-        right: 30px;
+        right: 1.875rem;
         transition: 0.2s;
     }
 
@@ -1004,11 +1003,9 @@ input:checked+.slider:before {
     }
 
     .nav__menu {
-
         flex-direction: column;
         justify-content: space-around;
         align-items: center;
-
         margin: 0;
         padding: 0;
         width: 100%;
@@ -1019,12 +1016,12 @@ input:checked+.slider:before {
     .nav__menu li {
         width: 100%;
         text-align: center;
-        padding: 20px;
+        padding: 1.25rem;
     }
 
     .nav__menu li a {
-        color: #14505c;
-        padding: 30px;
+        color: $colorPrincipal;
+        padding: 1.875rem;
     }
 
     @keyframes mostrarMenu {
@@ -1048,21 +1045,21 @@ input:checked+.slider:before {
     }
 
     .nav__hamburguesa.activado {
-        background-color: #14505c;
+        background-color: $colorPrincipal;
     }
 
     .navegador.activado {
         background: #fff;
-        color: #14505c;
+        color: $colorPrincipal;
     }
 
     h2.activado {
-        color: #14505c;
+        color: $colorPrincipal;
     }
 
     .br-1.animado {
         transform: rotate(-45deg)translate(-8px, 10px);
-        background: #14505c;
+        background: $colorPrincipal;
     }
 
     .br-2.animado {
@@ -1071,7 +1068,7 @@ input:checked+.slider:before {
 
     .br-3.animado {
         transform: rotate(45deg)translate(-7px, -8px);
-        background: #14505c;
+        background: $colorPrincipal;
     }
 
     /*SECCION HOME*/
@@ -1165,29 +1162,29 @@ input:checked+.slider:before {
         flex-direction: column;
         align-items: flex-start;
         padding: 25px 0;
+        height: 5rem;
     }
 
     .navegador__activo {
         background-color: #fff;
         box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.29);
-        height: 14vh;
+        height: 5rem;
         justify-content: center;
 
     }
 
     .navegador__activo ul li a {
-        color: #14505c;
+        color: $colorPrincipal;
     }
 
     .nav__logo {
-        padding-left: 25px;
+        padding-left: 1.5625rem;
     }
 
     .nav__hamburguesa {
         display: block;
         position: absolute;
-        top: 10px;
-        right: 30px;
+        right: 1.875rem;
         transition: 0.2s;
     }
 
@@ -1215,7 +1212,7 @@ input:checked+.slider:before {
     }
 
     .nav__menu li a {
-        color: #14505c;
+        color: $colorPrincipal;
         padding: 30px;
     }
 
@@ -1240,21 +1237,21 @@ input:checked+.slider:before {
     }
 
     .nav__hamburguesa.activado {
-        background-color: #14505c;
+        background-color: $colorPrincipal;
     }
 
     .navegador.activado {
         background: #fff;
-        color: #14505c;
+        color: $colorPrincipal;
     }
 
     h2.activado {
-        color: #14505c;
+        color: $colorPrincipal;
     }
 
     .br-1.animado {
         transform: rotate(-45deg)translate(-8px, 10px);
-        background: #14505c;
+        background: $colorPrincipal;
     }
 
     .br-2.animado {
@@ -1263,7 +1260,7 @@ input:checked+.slider:before {
 
     .br-3.animado {
         transform: rotate(45deg)translate(-7px, -8px);
-        background: #14505c;
+        background: $colorPrincipal;
     }
 
     /*SECCION HOME*/
@@ -1335,7 +1332,7 @@ input:checked+.slider:before {
     /*RESERVAS*/
     .reservas__completadas {
         width: 25rem;
-        border: 1px solid #14505c;
+        border: 1px solid $colorPrincipal;
     }
 
     /*SECCION CONTACTO*/
